# DroidDjinni

./: .gitignore  .gitmodules  README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/cc/eevee/djinni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/cc/eevee/djinni/: MainActivity.java  MyApplication.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cc/eevee/djinni/: ExampleUnitTest.java
djinni/: .gitignore  build_djinni.sh
djinni/idls/: leveldb.idl
djinni/idls/profile/: leveldb_profile.yaml
djinni/scripts/: run_djinni.sh
libleveldb/: build.gradle
libleveldb/src/androidTest/java/cc/eevee/djinni/leveldb/: ExampleInstrumentedTest.java
libleveldb/src/main/: AndroidManifest.xml
libleveldb/src/main/cpp/: CMakeLists.txt
libleveldb/src/main/cpp/base/: string.hpp
libleveldb/src/main/cpp/cmake/: SnappyConfig.cmake
libleveldb/src/main/cpp/leveldb/cpp/: leveldb.hpp  status.hpp  write_batch.hpp
libleveldb/src/main/cpp/leveldb/impl/: leveldb_impl.cpp  leveldb_impl.hpp  write_batch_impl.cpp  write_batch_impl.hpp
libleveldb/src/main/cpp/leveldb/jni/: NativeLeveldb.cpp  NativeLeveldb.hpp  NativeStatus.hpp  NativeWriteBatch.cpp  NativeWriteBatch.hpp
libleveldb/src/main/java/cc/eevee/djinni/leveldb/: Leveldb.java  Status.java  WriteBatch.java
libleveldb/src/test/java/cc/eevee/djinni/leveldb/: ExampleUnitTest.java
